--- a/index.html
+++ b/index.html
@@ -37,7 +37,38 @@
 </head>
 <body class="bg-slate-100 text-slate-800 min-h-screen overflow-hidden">
 
-    <!-- MODAL DE SUCESSO -->
+    <!-- MODAL SERVIÇO ESPECIAL -->
+    <div id="modalSpecial" class="fixed inset-0 bg-slate-900/60 backdrop-blur-sm z-[100] flex items-center justify-center hidden">
+        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-lg overflow-hidden">
+            <div class="px-6 py-4 border-b flex justify-between items-center">
+                <h3 class="font-black text-slate-800 uppercase text-sm">Adicionar Serviço Especial</h3>
+                <button onclick="closeModal('modalSpecial')" class="text-slate-400 hover:text-slate-600">&times;</button>
+            </div>
+            <div class="p-6 space-y-6">
+                <div>
+                    <label class="block text-[10px] font-black text-slate-400 uppercase mb-2">Nome do Item / Processo</label>
+                    <input type="text" id="special-item-name" oninput="validateSpecialModal()" placeholder="EX: CARCAÇA EXTRA, COMPONENTE PERSONALIZADO..." class="w-full bg-slate-800 text-white rounded-xl px-4 py-3 text-xs focus:ring-2 focus:ring-turbo-teal outline-none">
+                </div>
+                <div>
+                    <label class="block text-[10px] font-black text-slate-400 uppercase mb-3">Tipo de Peça</label>
+                    <div class="grid grid-cols-2 gap-4">
+                        <label class="flex items-center p-4 border rounded-xl cursor-pointer hover:bg-slate-50 transition border-turbo-teal" id="label-padrao">
+                            <input type="radio" name="special-type" value="PADRAO" checked class="mr-3">
+                            <span class="text-[10px] font-black text-turbo-teal uppercase">Peça Padrão</span>
+                        </label>
+                        <label class="flex items-center p-4 border rounded-xl cursor-pointer hover:bg-slate-50 transition" id="label-retrabalho">
+                            <input type="radio" name="special-type" value="RETRABALHO" class="mr-3">
+                            <span class="text-[10px] font-black text-slate-400 uppercase">Retrabalho</span>
+                        </label>
+                    </div>
+                </div>
+                <div class="flex space-x-3 pt-4 border-t">
+                    <button onclick="closeModal('modalSpecial')" class="flex-1 bg-slate-500 text-white font-black py-3 rounded-xl uppercase text-[10px]">Cancelar</button>
+                    <button id="btn-add-special" disabled class="flex-1 bg-turbo-teal/40 text-white font-black py-3 rounded-xl uppercase text-[10px] cursor-not-allowed">Adicionar Card</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="modalSuccess" class="fixed inset-0 bg-slate-900/60 backdrop-blur-sm z-[100] flex items-center justify-center hidden">
         <div class="bg-white rounded-2xl p-8 max-w-sm w-full shadow-2xl text-center">
             <div class="w-20 h-20 bg-green-100 text-green-600 rounded-full flex items-center justify-center mx-auto mb-4">
@@ -104,7 +135,7 @@
                             <button onclick="handleAction('START')" id="btn-start" class="bg-white text-turbo-teal px-6 py-2 rounded-xl text-xs font-black uppercase tracking-widest hover:bg-slate-100 transition shadow-lg">
                                 Iniciar Desmontagem
                             </button>
-                            <button class="bg-white/20 hover:bg-white/30 transition px-4 py-2 rounded-xl text-[10px] font-bold uppercase tracking-wider flex items-center">
+                            <button onclick="openSpecialModal()" class="bg-white/20 hover:bg-white/30 transition px-4 py-2 rounded-xl text-[10px] font-bold uppercase tracking-wider flex items-center">
                                 <svg class="w-3 h-3 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M12 4v16m8-8H4" stroke-width="3" stroke-linecap="round"/></svg>
                                 Adicionar Serviço Especial
                             </button>
@@ -163,16 +194,20 @@
                         </div>
                     </div>
                     <div class="p-6">
-                        <div id="tab-anexos" class="tab-content space-y-3">
-                            <!-- Items dinâmicos aqui se necessário, ou manter estrutura visual -->
-                            <div class="grid grid-cols-12 gap-4 items-center bg-slate-50 p-3 rounded-xl border border-slate-100">
-                                <div class="col-span-4 text-xs font-bold text-slate-700 ml-2 uppercase">Peças Externas / Acessórios</div>
-                                <div class="col-span-3"><span class="block w-full text-center bg-emerald-500 text-white text-[9px] font-black py-2 rounded-lg uppercase tracking-widest">Conferido OK</span></div>
-                                <div class="col-span-5"><input type="text" placeholder="Observações da desmontagem..." class="w-full bg-white border border-slate-200 text-slate-600 text-[10px] rounded-lg px-4 py-2 outline-none focus:border-turbo-teal"></div>
-                            </div>
-                        </div>
-                        <div id="tab-geral" class="tab-content hidden py-10 text-center text-slate-400 text-xs italic">Lista Geral de Componentes Internos</div>
-                        <div id="tab-caracol" class="tab-content hidden py-10 text-center text-slate-400 text-xs italic">Avaliação de Carcaça Quente</div>
+<!-- ABA 1: ANEXOS -->
+<div id="tab-anexos" class="tab-content space-y-2">
+    <!-- O JS vai popular aqui com base nos itens: ABRAÇADEIRAS, MANGUEIRAS, FLANGES, CANOS, CALÇOS, COLETOR, PRISIONEIROS -->
+</div>
+
+<!-- ABA 2: GERAL -->
+<div id="tab-geral" class="tab-content hidden space-y-2">
+    <!-- O JS vai popular aqui com base nos itens: PARAFUSOS, CARCAÇA COMPRESSORA, CARCAÇA CENTRAL, ROTOR COMPRESSOR, EIXO ROTOR, PRATO, COLAR, ANEL ELÁSTICO, ATUADOR/VÁLVULA -->
+</div>
+
+<!-- ABA 3: CARACOL -->
+<div id="tab-caracol" class="tab-content hidden space-y-2">
+    <!-- O JS vai popular aqui com base nos itens: TRINCAS, ROSCAS, ASSENTO DA VÁLVULA, FACEAMENTO -->
+</div>
                     </div>
                 </div>
 
@@ -203,7 +238,54 @@
         document.addEventListener('DOMContentLoaded', () => {
             loadDisassemblyQueue();
             renderComponentGrid();
+            renderChecklists(); // Nova função
         });
+
+        // TAREFA: Gerar os checklists detalhados das abas
+        function renderChecklists() {
+            const data = {
+                'tab-anexos': ['ABRAÇADEIRAS', 'MANGUEIRAS', 'FLANGES', 'CANOS', 'CALÇOS', 'COLETOR', 'PRISIONEIROS'],
+                'tab-geral': ['PARAFUSOS', 'CARCAÇA COMPRESSORA', 'CARCAÇA CENTRAL', 'ROTOR COMPRESSOR', 'EIXO ROTOR', 'PRATO COMPRESSOR', 'COLAR', 'ANEL ELÁSTICO', 'ATUADOR / VÁLVULA'],
+                'tab-caracol': ['TRINCAS (PAREDE)', 'ROSCAS / PRISIONEIROS', 'ASSENTO DA VÁLVULA', 'FACEAMENTO']
+            };
+
+            Object.keys(data).forEach(tabId => {
+                const container = document.getElementById(tabId);
+                container.innerHTML = data[tabId].map(item => `
+                    <div class="grid grid-cols-12 gap-3 items-center bg-white p-2 rounded-xl border border-slate-100 hover:border-turbo-teal transition-colors">
+                        <div class="col-span-4 text-[10px] font-black text-slate-700 ml-2 uppercase tracking-tight">${item}</div>
+                        <div class="col-span-3">
+                            <select class="w-full bg-emerald-500 text-white text-[9px] font-black py-2 rounded-lg uppercase text-center outline-none">
+                                <option>PEÇA OK</option>
+                                <option>TROCAR</option>
+                                <option>RECONDICIONAR</option>
+                            </select>
+                        </div>
+                        <div class="col-span-5">
+                            <input type="text" placeholder="Obs..." class="w-full bg-slate-700 text-white text-[10px] rounded-lg px-3 py-2 outline-none focus:ring-1 focus:ring-turbo-teal">
+                        </div>
+                    </div>
+                `).join('');
+            });
+        }
+
+        // TAREFA: Validar e abrir o modal de serviço especial
+        function openSpecialModal() {
+            document.getElementById('modalSpecial').classList.remove('hidden');
+        }
+
+        function validateSpecialModal() {
+            const name = document.getElementById('special-item-name').value;
+            const btn = document.getElementById('btn-add-special');
+            if(name.length > 3) {
+                btn.disabled = false;
+                btn.classList.remove('bg-turbo-teal/40', 'cursor-not-allowed');
+                btn.classList.add('bg-turbo-teal');
+            } else {
+                btn.disabled = true;
+                btn.classList.add('bg-turbo-teal/40', 'cursor-not-allowed');
+            }
+        }
 
         // Carregar Fila do Webhook
         async function loadDisassemblyQueue() {
